// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chat :ui > ChatActionbar 结构指纹 > chat-actionbar 1`] = `
"<div.t-chat__actions>
  <div.t-space.t-space-horizontal>
    <div.t-space-item>
      <div.t-chat__refresh>
        <button.t-button.t-button--variant-base.t-button--theme-default.t-button--shape-rectangle.t-size-s[href=][type=button]>
          <span.t-button__text>
            <svg.t-icon-refresh />
        <span.t-chat__refresh-line>
  <div.t-space.t-space-horizontal>
    <div.t-space-item>
      <button.t-button.t-button--variant-base.t-button--theme-default.t-button--shape-rectangle.t-size-s.copy-btn[data-clipboard-text=][href=][type=button]>
        <span.t-button__text>
          <svg.t-icon-copy />
  <div.t-space.t-space-horizontal>
    <div.t-space-item>
      <button.t-button.t-button--variant-base.t-button--theme-default.t-button--shape-rectangle.t-size-s[href=][type=button]>
        <span.t-button__text>
          <svg.t-icon-thumb-up />
  <div.t-space.t-space-horizontal>
    <div.t-space-item>
      <button.t-button.t-button--variant-base.t-button--theme-default.t-button--shape-rectangle.t-size-s[href=][type=button]>
        <span.t-button__text>
          <svg.t-icon-thumb-down />"
`;

exports[`chat :ui > ChatItem 结构指纹（含头像 / 昵称 / 时间） > chat-item 1`] = `
"<div.t-chat__inner.user.t-chat__text--variant--base>
  <div.t-chat__avatar>
    <div.t-chat__avatar__box>
      <img.t-chat__avatar-image>
  <div.t-chat__content>
    <div.t-chat__base>
      <span.t-chat__name> "张三"
      <span.t-chat__time> "2024-01-01 10:00:00"
    <div.t-chat__detail>
      <div.t-chat__text>
        <div.t-chat__text--user.other__user>
          <pre> "你好 TDesign""
`;

exports[`chat :ui > ChatList reverse 容器层结构指纹 > chat-list-reverse 1`] = `
"<div.t-chat.t-chat--normal>
  <div.t-chat__list.t-chat__list--reverse>
    <div.place-holder>
    <div.t-divider.t-divider--horizontal.t-divider--with-text.t-divider--with-text-center.clear-btn>
      <span.t-divider__inner-text>
        <svg.t-icon-clear />
        <span.clear-btn-text> "清空历史记录""
`;

exports[`chat :ui > ChatList 容器层结构指纹 > chat-list 1`] = `
"<div.t-chat.t-chat--normal>
  <div.t-chat__list>
    <div>
    <div.t-divider.t-divider--horizontal.t-divider--with-text.t-divider--with-text-center.clear-btn>
      <span.t-divider__inner-text>
        <svg.t-icon-clear />
        <span.clear-btn-text> "清空历史记录""
`;

exports[`chat :ui > ChatReasoning 结构指纹 > chat-reasoning 1`] = `
"<div.t-chat__detail-reasoning>
  <div.t-collapse.t--border-less.t-chat__detail-reasoning-border>
    <div.t-collapse-panel>
      <div.t-collapse-panel__wrapper>
        <div.t-collapse-panel__header.t-is-clickable>
          <div.t-collapse-panel__header--blank>
          <div.t-collapse-panel__icon.t-collapse-panel__icon--right.t-collapse-panel__icon--active>
            <svg />
        <transition-stub>
          <div.t-collapse-panel__body>
            <div.t-collapse-panel__content>"
`;

exports[`chat :ui > ChatSender 结构指纹 > chat-sender 1`] = `
"<div.t-chat-sender>
  <div.t-chat-sender__textarea>
    <div.t-chat-sender__header>
    <div.t-chat-sender__inner-header>
    <div.t-chat-sender__textarea__wrapper>
      <div.t-textarea>
        <textarea.t-textarea__inner.t-is-default.t-resize-none>
    <div.t-chat-sender__footer>
      <div.t-chat-sender__mode>
      <div.t-chat-sender__button>
        <div.t-chat-sender__button__sendbtn>
          <button.t-button.t-button--variant-text.t-button--theme-default.t-button--shape-rectangle.t-size-s.t-chat-sender__button__default[href=][type=button]>
            <span.t-button__text>
              <svg.t-icon-send-filled />"
`;

exports[`chat :ui > 完整对话场景组合结构指纹 > chat-scene 1`] = `
"<div.chat-scene>
  <div.t-chat.t-chat--normal>
    <div.t-chat__list>
      <div>
      <div.t-divider.t-divider--horizontal.t-divider--with-text.t-divider--with-text-center.clear-btn>
        <span.t-divider__inner-text>
          <svg.t-icon-clear />
          <span.clear-btn-text> "清空历史记录"
  <div.t-chat-sender>
    <div.t-chat-sender__textarea>
      <div.t-chat-sender__header>
      <div.t-chat-sender__inner-header>
      <div.t-chat-sender__textarea__wrapper>
        <div.t-textarea>
          <textarea.t-textarea__inner.t-is-default.t-resize-none>
      <div.t-chat-sender__footer>
        <div.t-chat-sender__mode>
        <div.t-chat-sender__button>
          <div.t-chat-sender__button__sendbtn>
            <button.t-button.t-button--variant-text.t-button--theme-default.t-button--shape-rectangle.t-size-s.t-is-disabled.t-chat-sender__button__default.t-chat-sender__button--disabled[disabled=][href=][type=button]>
              <span.t-button__text>
                <svg.t-icon-send-filled />"
`;
